kubernetes/npm/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: npm
  name: npm
  namespace: nginx-proxy-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: npm
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: npm
    spec:
      containers:
        - image: jc21/nginx-proxy-manager:latest
          name: npm
          ports:
            - containerPort: 80
            - containerPort: 81
            - containerPort: 443
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: npm-vol0
            - mountPath: /etc/letsencrypt
              name: npm-vol1
      restartPolicy: Always
      volumes:
        - name: npm-vol0
          persistentVolumeClaim:
            claimName: npm-vol0
        - name: npm-vol1
          persistentVolumeClaim:
            claimName: npm-vol1
status: {}
