kubernetes/npm/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: npm
  name: npm
  namespace: nginx-proxy-manager
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "81"
      port: 81
      targetPort: 81
    - name: "443"
      port: 443
      targetPort: 443
  selector:
    io.kompose.service: npm
status:
  loadBalancer: {}
